Compare SAT design changes one-by-one
Carry out a comparison of the SAT design changes introduced in the Chile Optimization Report, introducing each change in the numerical order shown in the report
Repeat with thin windows.
(Uses BICEP/Keck measured forebaflle and window temperatures for Pole)

--- a/jbolo/2025/SAT_comparisons.ipynb
+++ b/jbolo/2025/SAT_comparisons.ipynb
@@ -16,7 +16,19 @@
    "execution_count": 1,
    "id": "830993ed-7b5c-4bce-845d-dbe1705514af",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'jbolo_funcs'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mglob\u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01myaml\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mjbolo_funcs\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m *\n\u001b[32m      8\u001b[39m k_B = \u001b[32m1.380649e-23\u001b[39m \u001b[38;5;66;03m# Boltzmann's constant\u001b[39;00m\n\u001b[32m     10\u001b[39m \u001b[38;5;66;03m# Make inline plots in this notebook, make them reasonable sizes, and with legible font size\u001b[39;00m\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'jbolo_funcs'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -37,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "720cc7a8-a857-455d-a16d-b1ab5f006cb5",
    "metadata": {},
    "outputs": [
@@ -67,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "94ed016a-e4fe-409b-b121-d8097932a70a",
    "metadata": {},
    "outputs": [
@@ -341,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a751170d-1991-45b4-9318-718b89bc4b06",
    "metadata": {},
    "outputs": [
@@ -433,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "15cbcf0d-1bf7-4c6a-a65f-523f42db1506",
    "metadata": {},
    "outputs": [
@@ -490,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "d417e97d-f054-42b0-a73e-00ccd410dae7",
    "metadata": {},
    "outputs": [
@@ -539,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "a09806a8-331f-4822-acc8-235338e71e94",
    "metadata": {},
    "outputs": [
@@ -609,7 +621,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "jbolo",
    "language": "python",
    "name": "python3"
   },
@@ -623,7 +635,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
