--- a/jbolo/ChOpt_Report/SAT_NETs_Pole_AmbientTemsp.ipynb
+++ b/jbolo/ChOpt_Report/SAT_NETs_Pole_AmbientTemsp.ipynb
@@ -21,16 +21,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'D:\\\\pgrimes\\\\Software\\\\GitHub\\\\bolo_calc_runs\\\\jbolo\\\\ChOpt_Report'"
+       "'c:\\\\Users\\\\Paul Grimes\\\\Documents\\\\GitHub\\\\bolo_calc_runs\\\\jbolo\\\\ChOpt_Report'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,27 +41,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "import sys\n",
-    "sys.path.insert(0,'D:\\\\pgrimes\\\\Software\\\\GitHub\\\\jbolo\\\\src')\n",
+    "import os\n",
     "\n",
-    "os.environ['JBOLO_PATH'] = 'D:\\\\pgrimes\\\\Software\\\\GitHub\\\\jbolo'"
+    "sys.path.insert(0,'C:\\\\Users\\\\Paul Grimes\\\\Documents\\\\GitHub\\\\jbolo\\\\src')\n",
+    "\n",
+    "os.environ['JBOLO_PATH'] = 'C:\\\\Users\\\\Paul Grimes\\\\Documents\\\\GitHub\\\\jbolo'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['D:\\\\pgrimes\\\\Software\\\\GitHub\\\\jbolo\\\\src', 'D:\\\\pgrimes\\\\Software\\\\GitHub\\\\jbolo\\\\src', 'D:\\\\pgrimes\\\\Software\\\\GitHub\\\\jbolo\\\\src', 'D:\\\\pgrimes\\\\Software\\\\GitHub\\\\jbolo\\\\src', 'D:\\\\pgrimes\\\\Software\\\\GitHub\\\\jbolo\\\\src', 'D:\\\\Software\\\\miniconda3\\\\envs\\\\jbolo\\\\python313.zip', 'D:\\\\Software\\\\miniconda3\\\\envs\\\\jbolo\\\\DLLs', 'D:\\\\Software\\\\miniconda3\\\\envs\\\\jbolo\\\\Lib', 'D:\\\\Software\\\\miniconda3\\\\envs\\\\jbolo', '', 'D:\\\\Software\\\\miniconda3\\\\envs\\\\jbolo\\\\Lib\\\\site-packages', 'D:\\\\Software\\\\miniconda3\\\\envs\\\\jbolo\\\\Lib\\\\site-packages\\\\win32', 'D:\\\\Software\\\\miniconda3\\\\envs\\\\jbolo\\\\Lib\\\\site-packages\\\\win32\\\\lib', 'D:\\\\Software\\\\miniconda3\\\\envs\\\\jbolo\\\\Lib\\\\site-packages\\\\Pythonwin']\n"
+      "['C:\\\\Users\\\\Paul Grimes\\\\Documents\\\\GitHub\\\\jbolo\\\\src', 'c:\\\\Users\\\\pgrimes\\\\miniforge\\\\envs\\\\jbolo\\\\python313.zip', 'c:\\\\Users\\\\pgrimes\\\\miniforge\\\\envs\\\\jbolo\\\\DLLs', 'c:\\\\Users\\\\pgrimes\\\\miniforge\\\\envs\\\\jbolo\\\\Lib', 'C:\\\\Users\\\\Paul Grimes\\\\miniforge\\\\envs\\\\jbolo', 'c:\\\\Users\\\\pgrimes\\\\miniforge\\\\envs\\\\jbolo', '', 'c:\\\\Users\\\\pgrimes\\\\miniforge\\\\envs\\\\jbolo\\\\Lib\\\\site-packages', 'c:\\\\Users\\\\pgrimes\\\\miniforge\\\\envs\\\\jbolo\\\\Lib\\\\site-packages\\\\win32', 'c:\\\\Users\\\\pgrimes\\\\miniforge\\\\envs\\\\jbolo\\\\Lib\\\\site-packages\\\\win32\\\\lib', 'c:\\\\Users\\\\pgrimes\\\\miniforge\\\\envs\\\\jbolo\\\\Lib\\\\site-packages\\\\Pythonwin']\n"
      ]
     }
    ],
@@ -71,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -91,29 +93,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "D:\\pgrimes\\Software\\GitHub\\bolo_calc_runs\\jbolo\\ChOpt_Report\n",
-      " Volume in drive D is DATA\n",
-      " Volume Serial Number is CE6C-C6C5\n",
+      "c:\\Users\\Paul Grimes\\Documents\\GitHub\\bolo_calc_runs\\jbolo\\ChOpt_Report\n",
+      " Volume in drive C is OS\n",
+      " Volume Serial Number is 781B-3C01\n",
       "\n",
-      " Directory of D:\\pgrimes\\Software\\GitHub\\bolo_calc_runs\\jbolo\\ChOpt_Report\n",
+      " Directory of c:\\Users\\Paul Grimes\\Documents\\GitHub\\bolo_calc_runs\\jbolo\\ChOpt_Report\n",
       "\n",
       "\n",
-      " Directory of D:\\pgrimes\\Software\\GitHub\\bolo_calc_runs\\jbolo\\ChOpt_Report\\yamls\n",
+      " Directory of c:\\Users\\Paul Grimes\\Documents\\GitHub\\bolo_calc_runs\\jbolo\\ChOpt_Report\\yamls\n",
       "\n",
-      "03/17/2025  14:55    <DIR>          .\n",
-      "03/17/2025  14:55    <DIR>          ..\n",
-      "03/17/2025  14:55             8,898 SAT_2025_AoAalt1.yaml\n",
-      "03/17/2025  13:16             8,940 SAT_2025_PoleAlt1.yaml\n",
-      "03/17/2025  13:16             8,899 SAT_2025_PoleAlt1_273K.yaml\n",
-      "               3 File(s)         26,737 bytes\n",
-      "               2 Dir(s)  648,166,838,272 bytes free\n"
+      "03/22/2025  14:33    <DIR>          .\n",
+      "03/22/2025  14:33    <DIR>          ..\n",
+      "03/22/2025  15:07             8,909 SAT_2025_AoAalt1.yaml\n",
+      "03/22/2025  15:07             8,951 SAT_2025_PoleAlt1.yaml\n",
+      "03/22/2025  15:07             8,910 SAT_2025_PoleAlt1_273K.yaml\n",
+      "               3 File(s)         26,770 bytes\n",
+      "               2 Dir(s)  375,975,342,080 bytes free\n"
      ]
     },
     {
@@ -125,7 +127,7 @@
     }
    ],
    "source": [
-    "%cd \"D:\\\\pgrimes\\\\Software\\\\GitHub\\\\bolo_calc_runs\\\\jbolo\\\\ChOpt_Report\"\n",
+    "%cd \"c:\\\\Users\\\\Paul Grimes\\\\Documents\\\\GitHub\\\\bolo_calc_runs\\\\jbolo\\\\ChOpt_Report\"\n",
     "# List what yaml files you have so you can choose one for the next line.\n",
     "%ls -lt1 yamls "
    ]
@@ -142,27 +144,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Dictionary of models to use, which includes yaml file for now, but will have results in it later.\n",
     "SAT_models = {}\n",
     "\n",
-    "# Thin (1.5mm) window, tandelta = 3e-4\n",
-    "SAT_models['Pole_Alt1']={  \n",
-    "    'yaml':'SAT_2025_AoAalt1.yaml'\n",
+    "# Thin (1.5mm) window, otherwise as for Phase 2\n",
+    "SAT_models['Chile Phase 2 Single MF']={  \n",
+    "    'yaml':'SAT_HWP_aggr_MF.yaml'\n",
     "}\n",
     "\n",
-    "# Thin (1.5mm) window, tandelta = 3e-4\n",
-    "SAT_models['Pole_Alt1_273K']={  \n",
-    "    'yaml':'SAT_2025_PoleAlt1_273K.yaml'\n",
+    "# Phase 2, 20mm HDPE window\n",
+    "SAT_models['Chile Phase 2']={  \n",
+    "    'yaml':'SAT_HWP_aggr_20241121_phase2.yaml'\n",
     "}\n",
     "\n",
-    "# Thin (1.5mm) window, tandelta = 1.2e-4\n",
-    "SAT_models['Pole_Alt1_B3Temps']={  \n",
-    "    'yaml':'SAT_2025_PoleAlt1.yaml'\n",
-    "}\n"
+    "# As above, no half-wave plate\n",
+    "SAT_models['Chile P2 No HWP']={  \n",
+    "    'yaml':'SAT_aggr_20241121_phase2.yaml'\n",
+    "}\n",
+    "\n",
+    "# No HWP, 30 deg FOV\n",
+    "SAT_models['Chile P2 No HWP 30 deg FOV']={  \n",
+    "    'yaml':'SAT_aggr_20241121_30degFOV.yaml'\n",
+    "}\n",
+    "\n",
+    "# Pole, aggressive 35 deg FOV\n",
+    "SAT_models['Pole P2 No HWP']={  \n",
+    "    'yaml':'Pole_SAT_aggr_20241121_phase2.yaml'\n",
+    "}\n",
+    "\n",
+    "# Pole, aggressive 30 deg FOV\n",
+    "SAT_models['Pole P2 No HWP 30 deg FOV']={  \n",
+    "    'yaml':'Pole_SAT_aggr_20241121_30degFOV.yaml'\n",
+    "}\n",
+    "\n",
+    "# Pole, original\n",
+    "SAT_models['Pole Orig']={  \n",
+    "    'yaml':'Pole_SAT_orig_20241121_30degFOV.yaml'\n",
+    "}"
    ]
   },
   {
@@ -174,52 +196,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pole_Alt1, Pole, pwv = 321 u, elev = 50\n",
-      "            NET_NC   ms_ratio     P_opt\n",
-      "LF_1         183.2      1.00       0.43\n",
-      "LF_2         171.8      1.00       1.89\n",
-      "MF_1_1       282.3      1.00       3.00\n",
-      "MF_2_1       243.8      1.00       2.93\n",
-      "MF_1_2       286.3      1.00       4.18\n",
-      "MF_2_2       306.6      1.00       4.45\n",
-      "HF_1         622.0      1.00       9.88\n",
-      "HF_2        1502.8      1.00      12.46\n",
+      "Chile Phase 2 Single MF, \tAtacama, \tpwv = 993 u, \telev = 50\n",
+      "         ,\t NET_NC,\t ms_ratio,\t P_opt\n",
+      "MF_1      ,\t   239.2,\t    3.64,\t      1.75\n",
+      "MF_2      ,\t   293.8,\t    2.90,\t      4.68\n",
       "\n",
-      "Pole_Alt1_273K, Pole, pwv = 321 u, elev = 50\n",
-      "            NET_NC   ms_ratio     P_opt\n",
-      "LF_1         166.6      1.21       0.38\n",
-      "LF_2         156.4      1.21       1.69\n",
-      "MF_1_1       243.3      1.35       2.52\n",
-      "MF_2_1       200.0      1.49       2.32\n",
-      "MF_1_2       209.4      1.87       2.81\n",
-      "MF_2_2       220.6      1.93       2.92\n",
-      "HF_1         440.7      2.00       6.43\n",
-      "HF_2        1080.4      1.94       8.42\n",
+      "Chile Phase 2, \tAtacama, \tpwv = 993 u, \telev = 50\n",
+      "         ,\t NET_NC,\t ms_ratio,\t P_opt\n",
+      "LF_1      ,\t   214.1,\t    2.31,\t      0.28\n",
+      "LF_2      ,\t   147.5,\t    4.32,\t      1.28\n",
+      "MF_1_1    ,\t   268.3,\t    3.44,\t      1.39\n",
+      "MF_2_1    ,\t   245.1,\t    2.82,\t      1.57\n",
+      "MF_1_2    ,\t   305.3,\t    2.67,\t      3.80\n",
+      "MF_2_2    ,\t   343.2,\t    2.13,\t      4.57\n",
+      "HF_1      ,\t   719.6,\t    0.81,\t     11.23\n",
+      "HF_2      ,\t  1816.9,\t    0.76,\t     14.66\n",
       "\n",
-      "Pole_Alt1_B3Temps, Pole, pwv = 321 u, elev = 50\n",
-      "            NET_NC   ms_ratio     P_opt\n",
-      "LF_1         162.0      1.28       0.37\n",
-      "LF_2         153.6      1.25       1.65\n",
-      "MF_1_1       240.0      1.39       2.48\n",
-      "MF_2_1       196.8      1.54       2.27\n",
-      "MF_1_2       205.5      1.94       2.74\n",
-      "MF_2_2       216.5      2.01       2.84\n",
-      "HF_1         434.7      2.05       6.30\n",
-      "HF_2        1069.2      1.98       8.29\n",
+      "Chile P2 No HWP, \tAtacama, \tpwv = 993 u, \telev = 50\n",
+      "         ,\t NET_NC,\t ms_ratio,\t P_opt\n",
+      "LF_1      ,\t   211.0,\t    2.38,\t      0.28\n",
+      "LF_2      ,\t   145.3,\t    4.45,\t      1.30\n",
+      "MF_1_1    ,\t   262.5,\t    3.59,\t      1.40\n",
+      "MF_2_1    ,\t   238.9,\t    2.97,\t      1.58\n",
+      "MF_1_2    ,\t   295.9,\t    2.84,\t      3.80\n",
+      "MF_2_2    ,\t   332.8,\t    2.27,\t      4.58\n",
+      "HF_1      ,\t   697.2,\t    0.87,\t     11.32\n",
+      "HF_2      ,\t  1762.6,\t    0.81,\t     14.89\n",
+      "\n",
+      "Chile P2 No HWP 30 deg FOV, \tAtacama, \tpwv = 993 u, \telev = 50\n",
+      "         ,\t NET_NC,\t ms_ratio,\t P_opt\n",
+      "LF_1      ,\t   211.0,\t    2.38,\t      0.28\n",
+      "LF_2      ,\t   145.3,\t    4.45,\t      1.30\n",
+      "MF_1_1    ,\t   262.5,\t    3.59,\t      1.40\n",
+      "MF_2_1    ,\t   238.9,\t    2.97,\t      1.58\n",
+      "MF_1_2    ,\t   295.9,\t    2.84,\t      3.80\n",
+      "MF_2_2    ,\t   332.8,\t    2.27,\t      4.58\n",
+      "HF_1      ,\t   697.2,\t    0.87,\t     11.32\n",
+      "HF_2      ,\t  1762.6,\t    0.81,\t     14.89\n",
+      "\n",
+      "Pole P2 No HWP, \tPole, \tpwv = 321 u, \telev = 50\n",
+      "         ,\t NET_NC,\t ms_ratio,\t P_opt\n",
+      "LF_1      ,\t   206.4,\t    2.49,\t      0.27\n",
+      "LF_2      ,\t   174.3,\t    3.07,\t      1.57\n",
+      "MF_1_1    ,\t   314.0,\t    2.48,\t      1.72\n",
+      "MF_2_1    ,\t   268.6,\t    2.34,\t      1.81\n",
+      "MF_1_2    ,\t   288.2,\t    3.00,\t      3.65\n",
+      "MF_2_2    ,\t   304.4,\t    2.72,\t      4.10\n",
+      "HF_1      ,\t   610.5,\t    1.13,\t      9.63\n",
+      "HF_2      ,\t  1478.4,\t    1.14,\t     12.19\n",
+      "\n",
+      "Pole P2 No HWP 30 deg FOV, \tPole, \tpwv = 321 u, \telev = 50\n",
+      "         ,\t NET_NC,\t ms_ratio,\t P_opt\n",
+      "LF_1      ,\t   206.4,\t    2.18,\t      0.27\n",
+      "LF_2      ,\t   174.3,\t    2.69,\t      1.57\n",
+      "MF_1_1    ,\t   314.0,\t    2.17,\t      1.72\n",
+      "MF_2_1    ,\t   268.6,\t    2.05,\t      1.81\n",
+      "MF_1_2    ,\t   288.2,\t    2.63,\t      3.65\n",
+      "MF_2_2    ,\t   304.4,\t    2.38,\t      4.10\n",
+      "HF_1      ,\t   610.5,\t    0.99,\t      9.63\n",
+      "HF_2      ,\t  1478.4,\t    1.00,\t     12.19\n",
+      "\n",
+      "Pole Orig, \tPole, \tpwv = 321 u, \telev = 50\n",
+      "         ,\t NET_NC,\t ms_ratio,\t P_opt\n",
+      "LF_1      ,\t   178.5,\t    1.00,\t      0.41\n",
+      "LF_2      ,\t   168.7,\t    1.00,\t      1.84\n",
+      "MF_1_1    ,\t   278.0,\t    1.00,\t      2.94\n",
+      "MF_2_1    ,\t   239.4,\t    1.00,\t      2.87\n",
+      "MF_1_2    ,\t   280.3,\t    1.00,\t      4.07\n",
+      "MF_2_2    ,\t   300.1,\t    1.00,\t      4.32\n",
+      "HF_1      ,\t   610.5,\t    1.00,\t      9.63\n",
+      "HF_2      ,\t  1478.4,\t    1.00,\t     12.19\n",
       "\n"
      ]
     }
@@ -273,15 +326,19 @@
     "        \n",
     "# Print a table for each model\n",
     "for model in models:\n",
-    "    print(SAT_models[model]['name'], end=', ')\n",
+    "    print(SAT_models[model]['name'], end=', \\t')\n",
     "    print(SAT_models[model]['site'], end=', ')\n",
-    "    print('pwv =',SAT_models[model]['pwv'],'u', end=', ')\n",
-    "    print('elev =',SAT_models[model]['elev'])\n",
+    "    print('\\tpwv =',SAT_models[model]['pwv'],'u', end=', ')\n",
+    "    print('\\telev =',SAT_models[model]['elev'])\n",
     "    #print('            NET_NC   corr_fact NET_C    NET_wafer  NET_tube map_speed  ms_ratio     P_opt')\n",
-    "    print('            NET_NC   ms_ratio     P_opt')\n",
+    "    print('         ,\\t NET_NC,\\t ms_ratio,\\t P_opt')\n",
     "    for ch in SAT_models[model]['channels']:\n",
-    "        msratio = SAT_models[model][ch]['mapping_speed']/SAT_models['Pole_Alt1'][ch]['mapping_speed']\n",
-    "        print(ch.ljust(10),end='')\n",
+    "        try:\n",
+    "            msratio = SAT_models[model][ch]['mapping_speed']/SAT_models['Pole Orig'][ch]['mapping_speed']\n",
+    "        except KeyError:\n",
+    "            ch_num = ch.split(\"_\")[-1]\n",
+    "            msratio = 2*SAT_models[model][ch]['mapping_speed']/(SAT_models['Pole Orig'][f'MF_1_{ch_num}']['mapping_speed'] + SAT_models['Pole Orig'][f'MF_2_{ch_num}']['mapping_speed'])\n",
+    "        print(ch.ljust(10),end=',\\t')\n",
     "#        print('{0:8.1f}  {1:8.3f} {2:8.1f}  {3:8.1f} {4:8.2f}  {5:10.2e}  {6:8.2f} {7:10.2f}'.format(SAT_models[model][ch]['NET_NC'], \n",
     "#                                                                                           SAT_models[model][ch]['corr_factor'],\n",
     "#                                                                                           SAT_models[model][ch]['NET_C'],\n",
@@ -290,7 +347,7 @@
     "#                                                                                           SAT_models[model][ch]['mapping_speed'],\n",
     "#                                                                                           msratio,\n",
     "#                                                                                           SAT_models[model][ch]['P_opt']))\n",
-    "        print('{0:8.1f}  {1:8.2f} {2:10.2f}'.format(SAT_models[model][ch]['NET_NC'], \n",
+    "        print('{0:8.1f},\\t{1:8.2f},\\t{2:10.2f}'.format(SAT_models[model][ch]['NET_NC'], \n",
     "                                                    msratio,\n",
     "                                                    SAT_models[model][ch]['P_opt']))\n",
     "\n",
@@ -298,13 +355,40 @@
     "    \n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\Users\\\\Paul Grimes\\\\Documents\\\\GitHub\\\\bolo_calc_runs\\\\jbolo\\\\ChOpt_Report'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:jbolo]",
+   "display_name": "jbolo",
    "language": "python",
-   "name": "conda-env-jbolo-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
